src/objects/Solicitud_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>Documentos_de_legalizaci_n__c</fullName>
        <label>Documentos de legalización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apertura de encargo fiduciario</fullName>
                </value>
                <value>
                    <fullName>Constancia de separación del inmueble</fullName>
                </value>
                <value>
                    <fullName>Certificado de tradición y libertad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_cliente_deudor__c</fullName>
        <label>Email cliente deudor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_constructora__c</fullName>
        <label>Email constructora</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_usuario_estado_Soporte_para_desemb__c</fullName>
        <label>Email usuario estado Soporte para desemb</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_usuario_estado_avaluo_favorable__c</fullName>
        <label>Email usuario estado avaluo favorable</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_usuario_estado_desembolsado__c</fullName>
        <label>Email usuario estado desembolsado</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_usuario_estado_referenciada__c</fullName>
        <label>Email usuario estado referenciada</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_usuario_ultima_modificaci_n__c</fullName>
        <label>Email usuario estado legalizada</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entidad_cedente__c</fullName>
        <formula>TEXT(Oportunidad__r.Entidad_cedente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entidad cedente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Es_primera_copia__c</fullName>
        <label>¿Es primera copia?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escritura_en_entidad_cedente__c</fullName>
        <label>Escritura en entidad cedente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escrituras_del_inmueble__c</fullName>
        <label>Escrituras del inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escrituras_recibidas__c</fullName>
        <label>Escrituras recibidas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_la_solicitud__c</fullName>
        <label>Estado de la solicitud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nueva Solicitud</fullName>
                    <default>true</default>
                    <label>Nueva Solicitud</label>
                </value>
                <value>
                    <fullName>Reproceso</fullName>
                </value>
                <value>
                    <fullName>Radicada</fullName>
                </value>
                <value>
                    <fullName>Digitalizada</fullName>
                </value>
                <value>
                    <fullName>Documentos Revisados</fullName>
                </value>
                <value>
                    <fullName>Devuelta</fullName>
                </value>
                <value>
                    <fullName>Devuelta reproceso</fullName>
                </value>
                <value>
                    <fullName>Referenciada</fullName>
                </value>
                <value>
                    <fullName>Referenciación Devuelta</fullName>
                </value>
                <value>
                    <fullName>Analizada</fullName>
                </value>
                <value>
                    <fullName>Negada</fullName>
                </value>
                <value>
                    <fullName>Aplazada</fullName>
                </value>
                <value>
                    <fullName>Preaprobada</fullName>
                </value>
                <value>
                    <fullName>Desistida</fullName>
                </value>
                <value>
                    <fullName>Legalizada sin constructora y proyecto</fullName>
                </value>
                <value>
                    <fullName>Análisis de asignación de cupo</fullName>
                </value>
                <value>
                    <fullName>Legalizada</fullName>
                </value>
                <value>
                    <fullName>Legalización devuelta</fullName>
                </value>
                <value>
                    <fullName>Legalización verificada</fullName>
                </value>
                <value>
                    <fullName>Legalización archivada</fullName>
                </value>
                <value>
                    <fullName>Avalúo solicitado</fullName>
                </value>
                <value>
                    <fullName>Avalúo y carta definitiva solicitada</fullName>
                </value>
                <value>
                    <fullName>Avalúo favorable</fullName>
                </value>
                <value>
                    <fullName>Avalúo desfavorable</fullName>
                </value>
                <value>
                    <fullName>Documentos legales solicitados</fullName>
                </value>
                <value>
                    <fullName>Documentos legales recibidos</fullName>
                </value>
                <value>
                    <fullName>Documentos leglaes devueltos</fullName>
                </value>
                <value>
                    <fullName>Estudios de títulos favorable</fullName>
                </value>
                <value>
                    <fullName>Estudios de títulos desfavorable</fullName>
                </value>
                <value>
                    <fullName>Oferta vinculante generada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_del_credito__c</fullName>
        <label>Estado de aprobación del crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Preaprobado</fullName>
                </value>
                <value>
                    <fullName>Negado</fullName>
                </value>
                <value>
                    <fullName>Aplazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estados_financieros_2_ultim__c</fullName>
        <label>Estados financieros 2 últimos años</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estudio_de_titulos__c</fullName>
        <label>Estudio de titulos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etapa__c</fullName>
        <label>Etapa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                    <default>true</default>
                    <label>Comercial</label>
                </value>
                <value>
                    <fullName>Mesa de control y verificación</fullName>
                </value>
                <value>
                    <fullName>Referenciación</fullName>
                </value>
                <value>
                    <fullName>Análisis de crédito</fullName>
                </value>
                <value>
                    <fullName>Desistido</fullName>
                </value>
                <value>
                    <fullName>Comité de crédito</fullName>
                </value>
                <value>
                    <fullName>Legalización</fullName>
                </value>
                <value>
                    <fullName>Jurídico</fullName>
                </value>
                <value>
                    <fullName>Paz y salvo</fullName>
                </value>
                <value>
                    <fullName>Escrituración</fullName>
                </value>
                <value>
                    <fullName>Desembolso</fullName>
                </value>
                <value>
                    <fullName>Custodia</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extracto_bancario_factura_inscripcion_TV__c</fullName>
        <label>Extracto bancario/factura inscripción TV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extractos_bancarios_ultimos_tres_meses__c</fullName>
        <label>Extractos bancarios (últimos tres meses)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FC_trae_hipoteca_de_CF__c</fullName>
        <label>¿FC trae hipoteca de CF?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNG__c</fullName>
        <label>FNG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Estudio_de_Titulos__c</fullName>
        <label>Fecha Estudio de Titulos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Pagare__c</fullName>
        <description>Una vez el cliente legalice el crédito se registra el campo fecha pagaré</description>
        <label>Fecha pagaré</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Revision_Legal__c</fullName>
        <label>Fecha Revisión Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_carta_definitiva_generada__c</fullName>
        <label>Fecha carta definitiva generada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_comite1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check cuando una solicitud de crédito sea aprobada.</description>
        <label>Fecha comité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_comite__c</fullName>
        <label>Fecha comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_desembolso__c</fullName>
        <label>Fecha de desembolso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_pago__c</fullName>
        <label>Fecha de pago</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_escrituras__c</fullName>
        <label>Fecha escrituras</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_pagare_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fecha pagaré</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_paz_y_salvo__c</fullName>
        <formula>Paz_y_salvo_SOL__r.Fecha_paz_y_salvo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha paz y salvo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_radicacion__c</fullName>
        <label>Fecha radicación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_recepci_n_1_copia__c</fullName>
        <label>Fecha recepción 1.ª copia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firma_fondo_nacional_de_garantias__c</fullName>
        <label>Firma fondo nacional de garantias</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firma_solicitud_beneficio_frech__c</fullName>
        <label>Firma solicitud beneficio FRECH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formato_de_solicitud_MI_CASA_YA__c</fullName>
        <label>Formato de solicitud MI CASA YA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formato_de_vinculacion_diligenciado__c</fullName>
        <label>Formato de vinculación diligenciado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotocopia_tarjeta_de_propiedad_vehiculo__c</fullName>
        <label>Fotocopia tarjeta de propiedad vehiculo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hipoteca_del_cr_dito_endosada__c</fullName>
        <label>Hipoteca del crédito endosada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historia_laboral_de_fondo_de_pensiones__c</fullName>
        <label>Historia laboral de fondo de pensiones</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Credito__c</fullName>
        <externalId>true</externalId>
        <label>Id Crédito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior__c</fullName>
        <label>Interior</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <formula>Monto_prestamo_aprobado__c/ Valor_del_aval_o__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legalizacion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box</description>
        <label>Legalización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matricula_inmobiliaria__c</fullName>
        <label>Matrícula inmobiliaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medio_de_pago__c</fullName>
        <label>Medio de pago</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Prorrata</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meta</label>
        <referenceTo>Meta__c</referenceTo>
        <relationshipLabel>Solicitudes de créditos</relationshipLabel>
        <relationshipName>Solicitudes_de_cr_ditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monto_prestamo_aprobado__c</fullName>
        <label>Monto préstamo aprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Motivo_carta_definitiva_no_generada__c</fullName>
        <label>Motivo carta definitiva no generada</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_de_devolucion__c</fullName>
        <label>Motivo de devolución</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentos incompletos, ilegibles, cortados y/o vencidos</fullName>
                </value>
                <value>
                    <fullName>Campos mal diligenciados y/o incompletos en la RC</fullName>
                </value>
                <value>
                    <fullName>No se logra contacto con todas las referencias</fullName>
                </value>
                <value>
                    <fullName>Documentos no cargados en la OpenKM</fullName>
                </value>
                <value>
                    <fullName>Cliente no cumple con políticas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_desembolso_por_corregir__c</fullName>
        <label>Motivo desembolso por corregir</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_devolucion_escrituras__c</fullName>
        <label>Motivo devolución escrituras</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_devolucion_legalizacion__c</fullName>
        <label>Motivo devolución legalización</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_no_FRECH__c</fullName>
        <label>Motivo no FRECH</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_escrituras__c</fullName>
        <label>No. escrituras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_pagare__c</fullName>
        <label>No. pagaré</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notaria__c</fullName>
        <label>Notaria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_cuenta__c</fullName>
        <label>Número de cuenta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <label>Número de documento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_asesor__c</fullName>
        <formula>Owner:User.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento asesor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_obligacion__c</fullName>
        <formula>Oportunidad__r.Numero_de_obligacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de obligación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_del_credito__c</fullName>
        <label>Número del crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observacion_Comite__c</fullName>
        <label>Observación Comité</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacion_Revision_Legal__c</fullName>
        <label>Observación Revisión Legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observaciones_devolucion__c</fullName>
        <label>Observaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Solicitudes de créditos</relationshipLabel>
        <relationshipName>Solicitudes_de_creditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Otro_si_de_frech_para_vivienda_vipa_firm__c</fullName>
        <label>Otro sí de FRECH para vivienda vipa firm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otro_si_firmado_y_con_huella__c</fullName>
        <label>Otro sí firmado y con huella</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otros_documentos__c</fullName>
        <label>Otros documentos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pagar_endonsado__c</fullName>
        <label>Pagaré endonsado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pagare_firmado_y_con_huella__c</fullName>
        <label>Pagaré firmado y con huella</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pantallazo_deuda_actual__c</fullName>
        <label>Pantallazo deuda actual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paz_y_salvo_SOL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paz y salvo</label>
        <referenceTo>Paz_y_salvo__c</referenceTo>
        <relationshipLabel>Solicitudes de créditos</relationshipLabel>
        <relationshipName>Solicitudes_de_cr_ditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paz_y_salvo__c</fullName>
        <label>Paz y salvo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paz_y_salvo_de_administracion__c</fullName>
        <label>Paz y salvo de administración</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paz_y_salvo_de_la_deuda_cancelada__c</fullName>
        <label>Paz y salvo de la deuda cancelada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paz_y_salvo_de_moras_embargos__c</fullName>
        <label>Paz y salvo de moras/embargos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paz_y_salvo_no_generado__c</fullName>
        <label>Paz y salvo no generado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cambio en sistema de amortización</fullName>
                </value>
                <value>
                    <fullName>Reporte negativo en antecedentes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paz_y_salvos_creados__c</fullName>
        <label>Paz y salvos creados</label>
        <summaryForeignKey>Paz_y_salvo__c.Solicitud_de_credito__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pertenece_a__c</fullName>
        <label>Pertenece a</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credifamilia</fullName>
                </value>
                <value>
                    <fullName>Findeter</fullName>
                </value>
                <value>
                    <fullName>Av Villas</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plazo_credito__c</fullName>
        <label>Plazo crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presta_merito_ejecutivo_a_CF__c</fullName>
        <label>¿Presta merito ejecutivo a CF?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.MiddleName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <label>Proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radicaci_n_de_cr_dito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Radicación de crédito</label>
        <referenceTo>Radicacion_de_credito__c</referenceTo>
        <relationshipLabel>Solicitudes de créditos</relationshipLabel>
        <relationshipName>Solicitudes_de_cr_ditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Radicacion_Casilla__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radicacion Casilla</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recepcion_de_escrituras__c</fullName>
        <label>Recepción de escrituras</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primera Vez</fullName>
                </value>
                <value>
                    <fullName>Segunda Vez</fullName>
                </value>
                <value>
                    <fullName>Tercera Vez</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>